fix(header): submenu stays visible when hovering over menu items

--- a/stationery-ecommerce-frontend/src/components/header/Header.module.scss
+++ b/stationery-ecommerce-frontend/src/components/header/Header.module.scss
@@ -62,6 +62,7 @@
   font-size: 13px;
   transition: color 0.25s ease;
   text-decoration: none;
+  padding: 5px 10px;
 
   svg {
     font-size: 22px;
@@ -76,7 +77,7 @@
 // Dropdown
 .dropdown {
   position: absolute;
-  top: 110%;
+  top: 100%;
   left: 0;
   background: #fff;
   border-radius: 10px;
@@ -144,7 +145,7 @@
 // Dropdown notification
 .dropdownEmpty {
   position: absolute;
-  top: 110%;
+  top: 100%;
   right: 0;
   width: 260px;
   background: #fff;
@@ -203,7 +204,7 @@
 // Dropdown user
 .dropdownUser {
   position: absolute;
-  top: 110%;
+  top: 100%;
   right: 0;
   width: 180px;
   background: #fff;
